--- a/test2.0/test.ipynb
+++ b/test2.0/test.ipynb
@@ -2,117 +2,61 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "\n",
-    "get_org_comments_for_the_hashtag"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "get_org_comments_for_the_hashtag() missing 2 required positional arguments: 'hashtag' and 'app_name'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m/home/saket/Documents/python/i3access/Twitter_scraper/test2.0/test.ipynb Cell 2\u001b[0m line \u001b[0;36m1\n\u001b[0;32m----> <a href='vscode-notebook-cell:/home/saket/Documents/python/i3access/Twitter_scraper/test2.0/test.ipynb#X11sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m The_twitter_Scraper\u001b[39m.\u001b[39;49mget_org_comments_for_the_hashtag()\n",
+      "\u001b[0;31mTypeError\u001b[0m: get_org_comments_for_the_hashtag() missing 2 required positional arguments: 'hashtag' and 'app_name'"
+     ]
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Debit_Credit_Card\n",
-      "card\n",
-      "debitcard\n",
-      "creditcard\n",
-      "cardpayment\n",
-      "cardpayments\n",
-      "atm\n",
-      "atmcard\n",
-      "atmcards\n",
       "Point_of_Sale\n",
-      "pos\n",
-      "posmachine\n",
-      "retail\n",
-      "Contactless\n",
-      "tapandpay\n",
-      "taptopay\n",
-      "tappayment\n",
-      "contactless\n",
-      "contactlesspayment\n",
-      "tapandgo\n",
-      "contactlesspurchase\n",
-      "nfc\n",
-      "contactlesscard\n",
-      "Payment_Wallets\n",
-      "paytmwallet\n",
-      "paymentbank\n",
-      "wallet\n",
-      "digitalwallet\n",
-      "onlinewallet\n",
-      "mobilewallet\n",
-      "phonewallet\n",
-      "Cheques\n",
-      "chequepayment\n",
-      "cheque\n",
-      "chequebounce\n",
-      "chequefraud\n",
-      "AEPS\n",
-      "aeps\n",
-      "aepsfraud\n",
-      "aadharpay\n",
-      "aadharbanking\n",
-      "aadharbiometric\n",
-      "biometricpayment\n",
-      "csc\n",
-      "aadharenabledpaymentsystem\n",
-      "cscpayment\n",
-      "cscfraud\n",
-      "doorstepbanking\n",
-      "miniatm\n",
-      "NETC_Fastag\n",
-      "fastag\n",
-      "tolltax\n",
-      "nhaitoll\n",
-      "toll\n",
-      "fastagfraud\n",
-      "fastagscam\n",
-      "netcfastag\n",
-      "QR\n",
-      "qr\n",
-      "qrfail\n",
-      "qrcode\n",
-      "qrpayment\n",
-      "qrtransaction\n",
-      "qrsticker\n",
-      "qrscan\n",
-      "qrscam\n",
-      "scanandpay\n",
-      "Others\n",
-      "cashless\n",
-      "cashlessindia\n",
-      "digitalindia\n",
-      "digitalbharat\n",
-      "payments\n",
-      "paymentgateway\n",
-      "cybercribe\n",
-      "bankingfraud\n",
-      "paymentfraud\n",
-      "paymentsuccess\n",
-      "onlinepayment\n",
-      "onlinepayments\n",
-      "digitalpayment\n",
-      "digitalpayments\n",
-      "digipay\n",
-      "moneytransfer\n",
-      "remittance\n",
-      "remit\n",
-      "cashdeposit\n",
-      "cashwithdrawal\n",
-      "cashwithdraw\n",
-      "paymenttransaction\n"
+      "retail\n"
+     ]
+    },
+    {
+     "ename": "NoSuchWindowException",
+     "evalue": "Message: no such window: target window already closed\nfrom unknown error: web view not found\n  (Session info: MicrosoftEdge=116.0.1938.62)\nStacktrace:\n#0 0x55d450b9e813 <unknown>\n#1 0x55d4508a1cf1 <unknown>\n#2 0x55d45087badb <unknown>\n#3 0x55d45090a2ad <unknown>\n#4 0x55d45091c645 <unknown>\n#5 0x55d450905343 <unknown>\n#6 0x55d4508d73c1 <unknown>\n#7 0x55d4508d85de <unknown>\n#8 0x55d450b6c8b6 <unknown>\n#9 0x55d450b6f79d <unknown>\n#10 0x55d450b6f289 <unknown>\n#11 0x55d450b6fc65 <unknown>\n#12 0x55d450b76deb <unknown>\n#13 0x55d450b70013 <unknown>\n#14 0x55d450b4caa5 <unknown>\n#15 0x55d450b8a6f8 <unknown>\n#16 0x55d450b8a87f <unknown>\n#17 0x55d450b98036 <unknown>\n#18 0x7f200e9543ec <unknown>\n",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNoSuchWindowException\u001b[0m                     Traceback (most recent call last)",
+      "\u001b[1;32m/home/saket/Documents/python/i3access/Twitter_scraper/test2.0/test.ipynb Cell 3\u001b[0m line \u001b[0;36m1\n\u001b[1;32m    <a href='vscode-notebook-cell:/home/saket/Documents/python/i3access/Twitter_scraper/test2.0/test.ipynb#W1sZmlsZQ%3D%3D?line=110'>111</a>\u001b[0m         \u001b[39mprint\u001b[39m(hashtag)\n\u001b[1;32m    <a href='vscode-notebook-cell:/home/saket/Documents/python/i3access/Twitter_scraper/test2.0/test.ipynb#W1sZmlsZQ%3D%3D?line=111'>112</a>\u001b[0m         technology \u001b[39m=\u001b[39m method\n\u001b[0;32m--> <a href='vscode-notebook-cell:/home/saket/Documents/python/i3access/Twitter_scraper/test2.0/test.ipynb#W1sZmlsZQ%3D%3D?line=112'>113</a>\u001b[0m         The_twitter_Scraper\u001b[39m.\u001b[39;49mget_org_comments_for_the_hashtag(hashtag, technology)\n\u001b[1;32m    <a href='vscode-notebook-cell:/home/saket/Documents/python/i3access/Twitter_scraper/test2.0/test.ipynb#W1sZmlsZQ%3D%3D?line=115'>116</a>\u001b[0m \u001b[39m# Hashes_search = \"\u001b[39;00m\n\u001b[1;32m    <a href='vscode-notebook-cell:/home/saket/Documents/python/i3access/Twitter_scraper/test2.0/test.ipynb#W1sZmlsZQ%3D%3D?line=116'>117</a>\u001b[0m \u001b[39m# technology =  \"Point of Sale (PoS)\"\u001b[39;00m\n\u001b[1;32m    <a href='vscode-notebook-cell:/home/saket/Documents/python/i3access/Twitter_scraper/test2.0/test.ipynb#W1sZmlsZQ%3D%3D?line=117'>118</a>\u001b[0m \u001b[39m# hashtag = \"#retail\"\u001b[39;00m\n\u001b[1;32m    <a href='vscode-notebook-cell:/home/saket/Documents/python/i3access/Twitter_scraper/test2.0/test.ipynb#W1sZmlsZQ%3D%3D?line=118'>119</a>\u001b[0m \u001b[39m# get_org_comments_for_the_hashtag(hashtag, technology\u001b[39;00m\n",
+      "File \u001b[0;32m~/Documents/python/i3access/Twitter_scraper/test2.0/The_twitter_Scraper.py:180\u001b[0m, in \u001b[0;36mget_org_comments_for_the_hashtag\u001b[0;34m(hashtag, app_name)\u001b[0m\n\u001b[1;32m    177\u001b[0m \u001b[39mwhile\u001b[39;00m \u001b[39mTrue\u001b[39;00m:\n\u001b[1;32m    178\u001b[0m     \u001b[39m# Scroll down\u001b[39;00m\n\u001b[1;32m    179\u001b[0m     time\u001b[39m.\u001b[39msleep(random\u001b[39m.\u001b[39muniform(\u001b[39m2\u001b[39m, \u001b[39m4\u001b[39m))\n\u001b[0;32m--> 180\u001b[0m     comments_soup \u001b[39m=\u001b[39m BeautifulSoup(driver\u001b[39m.\u001b[39;49mpage_source, \u001b[39m'\u001b[39m\u001b[39mhtml.parser\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[1;32m    181\u001b[0m     \u001b[39m# print('finaly working')\u001b[39;00m\n\u001b[1;32m    182\u001b[0m     \u001b[39m# print(comments_soup)\u001b[39;00m\n\u001b[1;32m    183\u001b[0m     \u001b[39mfor\u001b[39;00m comment_element \u001b[39min\u001b[39;00m comments_soup\u001b[39m.\u001b[39mfind_all(\u001b[39m'\u001b[39m\u001b[39marticle\u001b[39m\u001b[39m'\u001b[39m):\n",
+      "File \u001b[0;32m~/.local/lib/python3.11/site-packages/selenium/webdriver/remote/webdriver.py:445\u001b[0m, in \u001b[0;36mWebDriver.page_source\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    436\u001b[0m \u001b[39m@property\u001b[39m\n\u001b[1;32m    437\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mpage_source\u001b[39m(\u001b[39mself\u001b[39m) \u001b[39m-\u001b[39m\u001b[39m>\u001b[39m \u001b[39mstr\u001b[39m:\n\u001b[1;32m    438\u001b[0m \u001b[39m    \u001b[39m\u001b[39m\"\"\"Gets the source of the current page.\u001b[39;00m\n\u001b[1;32m    439\u001b[0m \n\u001b[1;32m    440\u001b[0m \u001b[39m    :Usage:\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    443\u001b[0m \u001b[39m            driver.page_source\u001b[39;00m\n\u001b[1;32m    444\u001b[0m \u001b[39m    \"\"\"\u001b[39;00m\n\u001b[0;32m--> 445\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mexecute(Command\u001b[39m.\u001b[39;49mGET_PAGE_SOURCE)[\u001b[39m\"\u001b[39m\u001b[39mvalue\u001b[39m\u001b[39m\"\u001b[39m]\n",
+      "File \u001b[0;32m~/.local/lib/python3.11/site-packages/selenium/webdriver/remote/webdriver.py:344\u001b[0m, in \u001b[0;36mWebDriver.execute\u001b[0;34m(self, driver_command, params)\u001b[0m\n\u001b[1;32m    342\u001b[0m response \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mcommand_executor\u001b[39m.\u001b[39mexecute(driver_command, params)\n\u001b[1;32m    343\u001b[0m \u001b[39mif\u001b[39;00m response:\n\u001b[0;32m--> 344\u001b[0m     \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49merror_handler\u001b[39m.\u001b[39;49mcheck_response(response)\n\u001b[1;32m    345\u001b[0m     response[\u001b[39m\"\u001b[39m\u001b[39mvalue\u001b[39m\u001b[39m\"\u001b[39m] \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_unwrap_value(response\u001b[39m.\u001b[39mget(\u001b[39m\"\u001b[39m\u001b[39mvalue\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39mNone\u001b[39;00m))\n\u001b[1;32m    346\u001b[0m     \u001b[39mreturn\u001b[39;00m response\n",
+      "File \u001b[0;32m~/.local/lib/python3.11/site-packages/selenium/webdriver/remote/errorhandler.py:229\u001b[0m, in \u001b[0;36mErrorHandler.check_response\u001b[0;34m(self, response)\u001b[0m\n\u001b[1;32m    227\u001b[0m         alert_text \u001b[39m=\u001b[39m value[\u001b[39m\"\u001b[39m\u001b[39malert\u001b[39m\u001b[39m\"\u001b[39m]\u001b[39m.\u001b[39mget(\u001b[39m\"\u001b[39m\u001b[39mtext\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m    228\u001b[0m     \u001b[39mraise\u001b[39;00m exception_class(message, screen, stacktrace, alert_text)  \u001b[39m# type: ignore[call-arg]  # mypy is not smart enough here\u001b[39;00m\n\u001b[0;32m--> 229\u001b[0m \u001b[39mraise\u001b[39;00m exception_class(message, screen, stacktrace)\n",
+      "\u001b[0;31mNoSuchWindowException\u001b[0m: Message: no such window: target window already closed\nfrom unknown error: web view not found\n  (Session info: MicrosoftEdge=116.0.1938.62)\nStacktrace:\n#0 0x55d450b9e813 <unknown>\n#1 0x55d4508a1cf1 <unknown>\n#2 0x55d45087badb <unknown>\n#3 0x55d45090a2ad <unknown>\n#4 0x55d45091c645 <unknown>\n#5 0x55d450905343 <unknown>\n#6 0x55d4508d73c1 <unknown>\n#7 0x55d4508d85de <unknown>\n#8 0x55d450b6c8b6 <unknown>\n#9 0x55d450b6f79d <unknown>\n#10 0x55d450b6f289 <unknown>\n#11 0x55d450b6fc65 <unknown>\n#12 0x55d450b76deb <unknown>\n#13 0x55d450b70013 <unknown>\n#14 0x55d450b4caa5 <unknown>\n#15 0x55d450b8a6f8 <unknown>\n#16 0x55d450b8a87f <unknown>\n#17 0x55d450b98036 <unknown>\n#18 0x7f200e9543ec <unknown>\n"
      ]
     }
    ],
    "source": [
+    "import The_twitter_Scraper\n",
     "\n",
     "# organizing payment types and their associated hashtags into a python dictionary\n",
     "payment_methods = {\n",
@@ -127,8 +71,8 @@
     "    #     \"atmcards\",\n",
     "    # ],\n",
     "    \"Point_of_Sale\": [\n",
-    "        \"pos\",\n",
-    "        \"posmachine\",\n",
+    "        # \"pos\",\n",
+    "        # \"posmachine\",\n",
     "        \"retail\"\n",
     "    ],\n",
     "    \"Contactless\": [\n",
@@ -217,6 +161,11 @@
     "    ]\n",
     "}\n",
     "\n",
+    "\n",
+    "# SaketThaku5099\n",
+    "# PwM.BhR9-Tkz4CN\n",
+    "\n",
+    "\n",
     "# if you want to access data for a specific category, for example 'Debit_Credit_Card'\n",
     "for method in payment_methods:\n",
     "    print(method)\n",
@@ -224,13 +173,12 @@
     "    for hashtag in hashTags:\n",
     "        print(hashtag)\n",
     "        technology = method\n",
-    "        \n",
-    "\n",
+    "        The_twitter_Scraper.get_org_comments_for_the_hashtag(hashtag, technology)\n",
     "\n",
     "# Hashes_search = \"\n",
-    "technology =  \"Point of Sale (PoS)\"\n",
-    "hashtag = \"#retail\"\n",
-    "# get_org_comments_for_the_hashtag(hashtag, technology)"
+    "# technology =  \"Point of Sale (PoS)\"\n",
+    "# hashtag = \"#retail\"\n",
+    "# get_org_comments_for_the_hashtag(hashtag, technology\n"
    ]
   },
   {
